--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-#wasIstHtml{
+body{
     font-family: 'Roboto', sans-serif;
-    background-color: black;
-    color: white;
+}
+h1{
+    font-size: 50px;
+    font-weight: bold;
+}
+h2{
+    font-size: 30px;
+}
+p{
+    font-size: 18px;
+}
+a{
+    color: black;
+}
+li{
+    list-style-type: disc;
 }
